--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:fragment="head_tag(title, links)">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title th:replace="${title}">Squad Generator</title>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!--Font Awesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+          integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <!--Squad Generator CSS-->
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/squadgenerator.css}"/>
+    <!--Additional Links-->
+    <th:block th:replace="${links}" />
 </head>
+
 <body>
-<th:block th:fragment="help">
+
+<header th:fragment="header(showHelp)">
+    <div class="fixed-top">
+        <nav class="navbar navbar-dark bg-dark mb-1">
+            <div class="col-10"><a th:href="@{/}"><span class="navbar-brand mb-0 h1"><i class="fas fa-users"></i> Squad Generator</span></a></div>
+            <div class="col-2">
+                <div th:if="${showHelp}" class="float-right">
+                    <a href="#" class="text-white" style="font-size:25px;" data-toggle="modal" data-target="#helpDialog"><i class="fa fa-question-circle"></i></a>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <!--Help Modal-->
     <div class="modal fade" id="helpDialog" tabindex="-1">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -161,6 +189,28 @@
             </div>
         </div>
     </div>
+</header>
+
+<main th:fragment="main(content)" class="container-fluid" style="margin-top: 70px;">
+    <th:block th:replace="${content}" />
+</main>
+
+<th:block th:fragment="javascript_section(scripts)">
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+    <!--Squad Generator JS-->
+    <script th:src="@{js/squadgenerator.js}"></script>
+    <!--Additional Scripts-->
+    <th:block th:replace="${scripts}" />
 </th:block>
+
 </body>
 </html>
