--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!--Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-          integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <!--Squad Generator CSS-->
-    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/squadgenerator.css}"/>
+<head th:replace="common :: head_tag(~{::title}, _)">
     <title>Squad Generator</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header"></div>
-<div class="container-fluid" style="margin-top: 70px;">
-    <div class="row">
+<!--Header-->
+<th:block th:replace="common :: header(showHelp=true)" />
+
+<!--Main Content-->
+<th:block th:replace="common :: main(~{::#content})" >
+    <div id="content" class="row">
         <div class="col-md-10 col-sm-12 scroll-y">
             <div class="alert alert-primary">
                 <h4 class="alert-heading">Welcome to the Squad Generator</h4>
@@ -33,14 +25,14 @@
                               th:object="${home.form}" method="post">
                             <div class="form-group mx-1">
                                 <label>Select # of Squads: &nbsp;</label>
-                                <select class="form-control" th:field="*{numberOfSquadsToCreate}">
+                                <select id="numberOfSquadsToCreate" class="form-control" th:field="*{numberOfSquadsToCreate}">
                                     <option th:each="num : *{possibleNumberOfSquads}"
                                             th:value="${num}"
                                             th:text="${num}">1
                                     </option>
                                 </select>
                             </div>
-                            <button type="submit" class="btn btn-outline-success mt-3 mt-sm-0">
+                            <button id="generateSquad" type="submit" class="btn btn-outline-success mt-3 mt-sm-0">
                                 <strong><i class="fas fa-users-cog"></i>&nbsp;Generate Squads</strong>
                             </button>
                         </form>
@@ -51,7 +43,7 @@
                                 <button id="collapseAll" type="button" class="btn btn-outline-dark"><strong><i
                                         class="far fa-minus-square"></i>&nbsp;Collapse All</strong></button>
                             </div>
-                            <button type="button" class="btn btn-outline-danger" onclick="location.reload()"><strong><i
+                            <button id="resetSquads" type="button" class="btn btn-outline-danger" onclick="location.reload()"><strong><i
                                     class="fas fa-times"></i>&nbsp;Reset Squads</strong></button>
                         </th:block>
                     </div>
@@ -61,10 +53,10 @@
                 <div id="waitingList" class="col-12" th:unless="${home.waitingList.empty}">
                     <div class="card">
                         <div class="card-header bg-dark text-white">
-                            <i class="fas fa-clipboard-list"></i>&nbsp;Waiting List
+                            <i class="fas fa-clipboard-list"></i>&nbsp;Waiting List ([[${home.waitingList.size()}]] Players)
                         </div>
                         <div>
-                            <table class="table table-sm table-striped mb-0">
+                            <table id="waitingListTable" class="table table-sm table-striped mb-0">
                                 <thead>
                                 <tr class="table-dark text-dark">
                                     <th>Player</th>
@@ -88,14 +80,15 @@
             </div>
             <div class="row mb-3" th:each="squad,iterStat : ${home.squads}">
                 <div class="col-12">
-                    <div class="card"
-                         th:id="${'squad' + iterStat.count}"
-                         th:with="collapsibleCardId = ${'squad' + iterStat.count} + 'collapsible'">
-                        <div class="card-header bg-dark" th:attrappend="data-collapsible-card-id=${collapsibleCardId}">
+                    <div class="card" th:with="squadPanelId = ${iterStat.count + '-SquadPanel'},
+                                               squadPanelBodyId = ${squadPanelId + 'Body'},
+                                               squadPanelBodyTableId = ${squadPanelBodyId + 'Table'}"
+                                      th:id="${squadPanelId}">
+                        <div class="card-header squad-panel bg-dark" th:attrappend="data-squad-panel-body-id=${squadPanelBodyId}">
                             <div class="row">
                                 <div class="col-sm-10 col-6 text-white">
-                                    <i class="fas fa-users"></i>&nbsp;
-                                    <span th:text="${'Squad ' + iterStat.count}"></span></div>
+                                    <i class="fas fa-users"></i>&nbsp; Squad [[${iterStat.count}]] ([[${squad.players.size()}]] Players)
+                                </div>
                                 <div class="col-sm-2 col-6 float-right text-secondary">
                                     <div class="progress" style="height: 30px;">
                                         <div class="progress-bar progress-bar-animated bg-secondary" th:style="'width:' + ${squad.getPercentage(T(com.benbobis.squadgenerator.model.SkillType).SKATING)} + '%'">
@@ -111,8 +104,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div th:id="${collapsibleCardId}" class="collapse">
-                            <table class="table table-sm table-striped mb-0">
+                        <div th:id="${squadPanelBodyId}" class="collapse squad-panel">
+                            <table th:id="${squadPanelBodyTableId}" class="table table-sm table-striped mb-0">
                                 <thead>
                                 <tr class="table-dark text-dark">
                                     <th>Player</th>
@@ -148,33 +141,23 @@
                         <a class="nav-link" href="#waitingList">Waiting List</a>
                     </li>
                     <li class="nav-item" th:each="squad,iterStat : ${home.squads}">
-                        <a class="nav-link" th:href="${'#squad' + iterStat.count}"
+                        <a class="nav-link" th:href="${'#' + iterStat.count + '-SquadPanel'}"
                            th:text="${'Squad ' + iterStat.count}"></a>
                     </li>
                 </ul>
             </nav>
         </div>
     </div>
-</div>
-<div th:replace="fragments/help :: help"></div>
+</th:block>
 
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+<!--JS Libraries and Additional Script Tags-->
+<th:block th:replace="common :: javascript_section(~{::script})" />
 <!--Squad Generator JS-->
-<script th:src="@{js/squadgenerator.js}"></script>
-
 <script type="text/javascript">
     $(function () {
         HomePage.initialize();
     });
 </script>
+
 </body>
 </html>
